Tested versions of UDPClient and UDPReceiver classes. UDPServer classes still need to be updated in order to be compatible with the new implementations.